// Copyright 2020 Huawei Technologies Co., Ltd.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package lcmservice;

message InstantiateRequest {
  oneof data {
    string hostIp = 1;
    bytes package = 2;
  };
}

message InstantiateResponse {
  string workloadId = 1;
  string status = 2;
}

message TerminateRequest {
   string hostIp = 1;
   string workloadId = 2;
}

message TerminateResponse {
  string status = 1;
}

message QueryRequest {
   string hostIp = 1;
   string workloadId = 2;
}

message QueryResponse {
  string status = 1;
}

service AppLCM {
  rpc instantiate (stream InstantiateRequest) returns (InstantiateResponse) {}
  rpc terminate (TerminateRequest) returns (TerminateResponse) {}
  rpc query (QueryRequest) returns (QueryResponse) {}
}